[gd_scene load_steps=3 format=3 uid="uid://dtycy5rbbvmsy"]

[ext_resource type="Script" path="res://HUD.gd" id="1_ljnos"]
[ext_resource type="FontFile" uid="uid://bwhcotwoaq45i" path="res://fonts/Xolonium-Regular.ttf" id="2_rca4q"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ljnos")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_rca4q")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -192.0
offset_right = 20.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_rca4q")
theme_override_font_sizes/font_size = 64
text = "TNTGHBSD"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ButtonContainer" type="VBoxContainer" parent="."]
offset_left = 142.0
offset_top = 500.0
offset_right = 182.0
offset_bottom = 540.0

[node name="StartButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rca4q")
theme_override_font_sizes/font_size = 64
text = "Start!"

[node name="QuitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rca4q")
theme_override_font_sizes/font_size = 64
text = "Quit"

[node name="FuelDisplayContainer" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="FuelLabel" type="Label" parent="FuelDisplayContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rca4q")
theme_override_font_sizes/font_size = 24
text = "Fuel ="

[node name="FuelAmountLabel" type="Label" parent="FuelDisplayContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rca4q")
theme_override_font_sizes/font_size = 24
text = "100"

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="ButtonContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
